# MIL

./: .gitignore  .gitmodules  SUMMARY.md  TODOlist.md  __init__.py  alarm.py  environment.yaml  outlog.txt  pipeline.sh  pyproject.toml  requirements.txt
MILdata/: README.md  collator.py  dataset.py  dataset_common.py  debug.py  imdb_edus.txt  imdb_sent.txt  pyproject.toml  yelp_edus.txt  yelp_sent.txt
MILdata/MCTS/: dataset.py
MILdata/PRM800K/: analyse_data.py  dataset.py  postprocess.py  preprocess.py
MILdata/ProcessBench/: data_analyse.py  dataset.py
MILdata/SCAN/: dataset.py
MILdata/annotation/: dataset.py
MILdata/sentiment/: dataset.py
MILdata/shepherd/: analyse_data.py  dataset.py
MILmodel/: README.md  debug.py  mil_base.py  mil_model_for_prm.py  model_wrapper.py  pyproject.toml  simple_mil_model.py
scripts/: annotate.sh  debug.sh  eval_mil.py  eval_mil.sh  pipeline.sh  plot_fragmented_metrics.py  plot_trainer_performance.py  run_mil.py  run_mil.sh  test_mil_pipeline.py
scripts/BoN/: BoN.py  majority_vote.py  pipeline.sh  preprocess.py
scripts/F1/: calculate_f1.py  evaluate.sh  pipeline.sh
scripts/beam_search/: README.md  beamsearch.py  beamsearch_new.py  rollout.py  run_beamsearch_example.sh  run_rollout_example.sh
scripts/debug/: analyse_minmil.py  clean_safetensors_keys.py  debug.py  test_mil_pipeline.py
trl/scripts/: utils.py
trl/trainer/: base_trainer.py  mil_config.py  mil_trainer.py  trainer.py
