[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MILdata"
version = "0.0.0"
description = "MIL data utilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools]
packages = ["MILdata"]
package-dir = {"MILdata" = "."}
